--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,11 +240,13 @@ footer {
 
 .footer-info h2 {
   margin: 0px;
+  margin-bottom: 10px;
   font-size: 24px;
 }
 
 .footer-info p {
   margin: 0px;
+  margin-bottom: 15px;
   font-size: 14px;
 }
 
